# point-free

./: CMakeLists.txt  README.md  README.md.txt
point-free/: CMakeLists.txt  Common.h  Makefile  Notes.txt  PointFree.cpp  README.md  test.c
point-free/ClangFormatHelpers/: ClangFormatHelpers.cpp  ClangFormatHelpers.h
point-free/TestFiles/: TemplateTest.cpp  test-functions.cpp
